swim_common/src/form/tests/derive/validated_form/generic_no_default.stderr
error[E0599]: no method named `as_value` found for struct `S<Invalid>` in the current scope
  --> $DIR/generic_no_default.rs:29:37
   |
19 |     struct Invalid;
   |     --------------- doesn't satisfy `Invalid: Default`
...
23 |     struct S<F> {
   |     -----------
   |     |
   |     method `as_value` not found for this
   |     doesn't satisfy `S<Invalid>: Form`
...
29 |     let _s = S { a: 1, f: Invalid }.as_value();
   |                                     ^^^^^^^^ method not found in `S<Invalid>`
   |
   = note: the method `as_value` exists but the following trait bounds were not satisfied:
           `Invalid: Default`
           which is required by `S<Invalid>: Form`
